--- a/Verkefni5.html
+++ b/Verkefni5.html
@@ -52,7 +52,7 @@
                                 <h2>Verkefni 4:</h2>
                                 <p>Markmið okkar var að hanna eitthvað sem við gætum og myndum í raun og veru nota.<br/ >
                                 Okkur langaði að búa til borðspil og var niðurstaðan sú að við myndum hanna og fræsa mylluborð. <br/ >
-                                Hönnunin okkar er 500x350mm og platan er 18mm á breydd með 9mm djúpum hólfum.<br/ >
+                                Hönnunin okkar er 500x350mm og platan er 18mm á þykkt með 9mm djúpum hólfum.<br/ >
                                 Hönnunina okkar á myllu borðinu má nálgast <a href="https://github.com/SindriSm/Framleidsluferli_4" class="">hér.</a>   
                                 </p>
                                 <a href="https://github.com/SindriSm/Framleidsluferli_4" class="image featured"><img src="images/Tik-Tak_mynd2.png" alt="" /></a>
@@ -183,6 +183,7 @@
                                         <source src="images/Tik-Tak_myndband.mp4" type="video/mp4">
                                     </video>
                                 </div>
+                                <p> <br/ > </p>
                             <div id="boxed">
                                 <h3>Skjöl:</h3>
                                 <table>
