--- a/Verkefni5.html
+++ b/Verkefni5.html
@@ -180,7 +180,7 @@
                             <h2>Myndband:</h2>
                                 <div>
                                     <video width="90%" controls>
-                                        <source src="images/Tik-Tak_myndband.mp4" type="video/mp4">
+                                        <source src="images/myndband_updated.mp4" type="video/mp4">
                                     </video>
                                 </div>
                                 <p> <br/ > </p>
