--- a/Verkefni1.html
+++ b/Verkefni1.html
@@ -31,7 +31,7 @@
 											<li><a href="Verkefni2.html">Verkefni 2</a></li>
 											<li><a href="Verkefni3.html">Verkefni 3</a></li>
 											<li><a href="Verkefni4.html">Verkefni 4</a></li>
-											<li><a href="Verkefni5.html">Verkefni 5</a></li>
+											<li><a href="Verkefni5.html">Lokaverkefnið</a></li>
 										</ul>
 									</li>
 									<li><a href="UmMig.html">Um Mig</a></li>
@@ -102,6 +102,27 @@
                                         <p>Git bað mig um að skrá mig inn á GitHub, eftir það þurfti ég bara að endurhlaða GitHub síðunni, við það birtust allar skrár sem ég hlóð þar inn á í gegnum Git. <br />
                                         Eftir það þurfti ég að smella á settings, finna þar GitHub Pages og breyta source úr "none" í "main" og vista. <br />
                                         Eftir þetta ætti síðan að vera komin á netið.</p>
+                                        <div id="boxed">
+                                            <p>(Bætt við eftir upphaflegu skil)</p>
+                                            <h2>Beint upload á Github:</h2>
+                                            <p>Eftir að hafa búið til repository á Github og pushað fyrsta kóðanum með Git þá verður endurupphlöðun töluvert auðveldari. <br/ >
+                                            Til þess þarf að opna repositoryið á Github, smella á "Add file" og velja "Upload Files" </p>
+                                            <a href="#" class="image featured"><img src="images/Github_AddFile.png" alt="" /></a>
+                                            <p>Eftir það þarf aðeins að draga skjalið yfir</p>
+                                            <a href="#" class="image featured"><img src="images/Github_DragDrop.png" alt="" /></a>
+                                            <p>Eftir það er hægt að bæta við útskýringum á breytingunum sem áttu sér stað. Þegar innlögn er tilbúin þarf aðeins að smella á "Commit Changes" </p>
+                                            <a href="#" class="image featured"><img src="images/Github_commitChanges.png" alt="" /></a>
+                                            <p>Það getur tekið smá tíma að uploada þessum breytingum en þegar það er búið hefur vefsíðan verið uppfærð.</p>
+                                            <p><br/ ></p>
+                                            <h2>Notkun á Brackets:</h2>
+                                            <p>Kóðinn af template-inu sem sóttur var hér eins og kemur framm hér að ofan var opnaður með Bracket editorinum. <br/ >
+                                            Editorar sem hægt er að nota við vefsíðugerðir eru ófáar og jafnvel er hægt að skrifa kóðann í notepad sem finna má á öllum Windows tölvum. <br/ >
+                                            Ástæðan fyrir því að ég valdi Brackets er einfaldlega sú að þeir bjóða upp á forskóðun á vefsíðunni í chrome vafranum. <br/ >
+                                            Til þess að forskoða þá er smellt á eldingar takkann sem staðsettur er uppi í vinstra horninu</p>
+                                            <a href="#" class="image featured"><img src="images/Brackets_elding.jpg" alt="" /></a>
+                                            <p>Við það opnast vefsíðan eins og hún mun birtast ef henni er ýtt á Github. <br/ >
+                                            Þetta er þæginlegt tól sem hefur gagnast mér mikið við gerð þessarar og annara verkefni í þessum áfanga.</p>
+                                        </div>
                                         
 									</article>
 
