--- a/Verkefni2.html
+++ b/Verkefni2.html
@@ -30,8 +30,8 @@
 											<li><a href="Verkefni1.html">Verkefni 1</a></li>
 											<li><a href="Verkefni2.html">Verkefni 2</a></li>
 											<li><a href="Verkefni3.html">Verkefni 3</a></li>
-											<li><a href="Verkefni4.html">Verkefni 4</a></li>
-											<li><a href="Verkefni5.html">Verkefni 5</a></li>
+											<li><a href="Verkefni4.html">Mitt Framlag</a></li>
+											<li><a href="Verkefni5.html">Lokaverkefnið</a></li>
 										</ul>
 									</li>
 									<li><a href="UmMig.html">Um Mig</a></li>
@@ -134,6 +134,20 @@
                                         Skurður: 10min <br/ >
                                         Samsetning: 20min</p>
                                         <h3>Samtals: 305 mínútur</h3>
+                                        <div id="boxed">
+                                            <p>(Bætt við eftir upphaflegu skil)</p>
+                                            <h2>Hönnunarskjöl:</h2>
+                                            <p>Smelltu á "Download DXF" takkann til að sækja DXF skránna af kaffistandinum.</p>
+                                            <a href="images/Nespresso_standur.dxf" class="button">Download DXF</a>
+                                            <p>Hægri smelltu svo og veldu "save as". <br/ >
+                                            Passaðu að skjalið heiti "Nespresso_standur.dxf" en ekki "Nespresso_standur.dxf.txt"</p>
+                                            <h2>Parametrar:</h2>
+                                            <p>Þar sem ég er vanari Inventor heldur en Fusion og okkur ekki kennt að notast við fyrir skilgreinda parametra þá voru þeir ekki margir við gerð þessa hlutar. Öll mál sem notast var við eru gefin í textanum hér fyrir ofan. <br/ >
+                                            Ég notaði því aðeins parametra þegar það kom að þykkt plötunnar (4mm)</p>
+                                            <a href="#" class="image featured"><img src="images/Nes_parametrar.JPG" alt="" /></a> 
+                                            <h2>Hópaverkefnið:</h2>
+                                            <p>Má finna á vefsíðu <a href="https://sindrism.github.io/Framleidsluferli.github.io/einsv2.html">Sindra Snæ Magnússonar</a> þar sem hann talar um Kerf.</p>
+                                        </div>
 									</article>
 
 							</div>
