--- a/Verkefni3.html
+++ b/Verkefni3.html
@@ -30,8 +30,8 @@
 											<li><a href="Verkefni1.html">Verkefni 1</a></li>
 											<li><a href="Verkefni2.html">Verkefni 2</a></li>
 											<li><a href="Verkefni3.html">Verkefni 3</a></li>
-											<li><a href="Verkefni4.html">Verkefni 4</a></li>
-											<li><a href="Verkefni5.html">Verkefni 5</a></li>
+											<li><a href="Verkefni4.html">Mitt Framlag</a></li>
+											<li><a href="Verkefni5.html">Lokaverkefnið</a></li>
 										</ul>
 									</li>
 									<li><a href="UmMig.html">Um Mig</a></li>
@@ -56,7 +56,7 @@
 											</header>
 											<p>Verkefni 3 í áfanganum Framleiðsluferli</p>
                                             <ul class="actions">
-												<li><a href="Verkefni4.html" class="button">Næsta verkefni</a></li>
+												<li><a href="Verkefni4.html" class="button">Mitt Framlag(Lokaverkefnið)</a></li>
 											</ul>
 										</section>
 										<section>
@@ -155,6 +155,24 @@
                                         Niðurhal og uppsetning 3D Zephyr: 30min <br/ >
                                         Vinnsla 3D Zephyr að 3D módeli: 10min</p>
                                         <h3>Samtals: 60 mínútur</h3>
+                                        <div id="boxed">
+                                            <p>(Bætt við eftir upphaflegu skil)</p>
+                                            <h2>Hönnunarskjöl:</h2>
+                                            <p>Smelltu á "Download STL" takkann til að sækja STL skránna af kranastútnum.</p>
+                                            <a href="images/stutur_bod.stl" class="button">Download STL</a>
+                                            <h2>Hópaverkefnið:</h2>
+                                            <p>Má finna á vefsíðu <a href="https://sindrism.github.io/Framleidsluferli.github.io/einsv3.html">Sindra Snæ Magnússonar</a> þar sem hann talar um "HÖNNUNAR REGLUR/ÞVINGANIR" neðst á síðunni sinni.</p>
+                                            <h2>Hvað þurfti að hafa í huga?</h2>
+                                            <p>Eins og kom framm fyrr í verkefninu þá notaðist ég við tree support og fékk ég það ráð frá starfsmanni FabLab. <br/ >
+                                            Hluturinn er ekki gerður til að standa einn og sér heldur þarf að halda á honum þannig ekki var gert ráð fyrir neinu öðru við hönnun hlutarins. Þetta gerði það að verkum að prenta þurfti hann út standandi á báðum endum stútsins með aðstoð fyrr nefnda tree support. <br/ > Tree supportið býr til auka stuðning sem heldur hlutnum uppréttum á meðan prentun stóð og minnkar líkurnar á því að hluturinn falli niður undir sinni eigin þyngd. Einnig voru hringir prentaðir í kringum báða enda stútana til að halda hlutnum á sínum stað og koma í veg fyrir að hann fari á flakk á meðan prentun stendur.<br/ >
+                                            Þegar ég var að ákveða vegg þykktina á hlutnum þá fann ég hvítt rafmagnsrör og mældi þykktina af því, þar sem það heldur einnig vatni. <br/ >
+                                            Fékk ég það út að hún væri ca. 0,8 til 1,2 mm. <br/ >
+                                            Þar sem minn hlutur er 3D prenntaður en ekki framleiddur fyrir iðnað eins og rafmagnsrörið þá ákvað ég að sniðugt væri að hafa stútinn minn þykkari eða 2 mm á þeim enda þar sem vatnið kemur í fyrstu snertingu við hann. <br/ >
+                                            Veggþykktin á munn enda stútsins er aftur á móti aðeins 1 mm og taldi ég það nóg. <br/ >
+                                            Ástæðan fyrir því er sú að þó þrýstingur sé enþá í rörinu þá leiðir hann út úr því á þessum tiltekna enda stútsins og því ekki jafn mikið álag á útveggjum. <br/ >
+                                            Ég geri mér grein fyrir því að þessi rök mín séu kannski ekki fullnægjandi en við framkvæmd þessa verkefnis þá fór án efa ekki mikil pæling í ákvarðanir á þykkt veggjanna önnur en þessi eina og ónákvæma mæling mín á gömlu rafmagns röri.<br/ >
+                                            Veggir stútsins þynnast því nær sem komið er munn enda stútsins.</p>
+                                        </div>
 									</article>
 
 							</div>
