--- a/Verkefni5.html
+++ b/Verkefni5.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Telephasic by HTML5 UP</title>
+		<title>Lokaverkefnið</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -155,7 +155,7 @@
                                   </tr>
                                 <tr>
                                     <td>Gerð myndbands</td>
-                                    <td>480 min</td>
+                                    <td>600 min</td>
                                     <td>Oliver</td>
                                   </tr>
                                 <tr>
@@ -174,7 +174,7 @@
                                     <td>Allir</td>
                                   </tr>
                                 </table>   
-                                <h3>Samtals: 1.360 mínútur</h3>
+                                <h3>Samtals: 1.480 mínútur</h3>
                             </div>
                             <br/ >
                             <h2>Myndband:</h2>
