--- a/Verkefni4.html
+++ b/Verkefni4.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Lokaverkefnið</title>
+		<title>Mitt Framlag</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 											<li><a href="Verkefni1.html">Verkefni 1</a></li>
 											<li><a href="Verkefni2.html">Verkefni 2</a></li>
 											<li><a href="Verkefni3.html">Verkefni 3</a></li>
-											<li><a href="Verkefni4.html">Verkefni 4</a></li>
+											<li><a href="Verkefni4.html">Mitt Framlag</a></li>
 											<li><a href="Verkefni5.html">Lokaverkefnið</a></li>
 										</ul>
 									</li>
@@ -52,11 +52,11 @@
 									<section id="sidebar">
 										<section>
 											<header>
-												<h3>Björgvin, Sindri, Óliver</h3>
+												<h3>Björgvin Þór Kolbeinsson</h3>
 											</header>
-											<p>Lokaverkefnið í Framleiðslukerfum</p>
+											<p>Fyrir lokaverkefnið í Framleiðslukerfum</p>
                                             <ul class="actions">
-												<li><a href="Verkefni5.html" class="button">Lokaverkefnið</a></li>
+												<li><a href="Verkefni5.html" class="button">Lokaverkefnið (V6)</a></li>
 											</ul>
 										</section>
 										<section>
@@ -79,57 +79,35 @@
 								<!-- Content -->
 									<article id="content">
 										<header>
-											<h2>Verkefni 4</h2>
+											<h2>Mitt Framlag</h2>
 											<p>Tik-Tak-Toe</p>
 										</header>
-										<a href="Verkefni4.html" class="image featured"><img src="images/Tik_tak_notMynd.jpg" alt="" /></a>
-										<p>Tik-Tak-Toe er einn vinsælasti leikur allra tíma þar sem hægt er að spila hann nærrum því hvar sem er. <br/ >
-                                        Flestir muna eftir þeim tíma í grunnskóla þar sem leikurinn var spilaður með blaði og blýant í leiðinnlegum kennslu tíma. Stundum var blaðinu jafnvel sleppt og skrifað var þá beint á borðið.<br/ >
-                                        En þessir lagalausu dagar eru nú liðnir þar sem hönnun okkar kemur í veg fyrir þörfina á slíkum skemmdarverkum.</p>
                                         <a href="Verkefni4.html" class="image featured"><img src="images/Tik-Tak_skemmdarverk.jpg" alt="" /></a>
-                                        <h3>Uppruni Hugmyndar:</h3>
-                                        <p>Eftir miklar vangaveltur um hvað ætti að gera sáum við samnemanda okkar spila millu á google leitarsíðunni.<br/ >
-                                        Okkur fannst þessi spilamennska nemandans áhugaverð þar sem þessi leikur hefur ekki sést utan grunnskóla landsins í þó nokkurn tíma. <br/ >
-                                        Var hönnun verkefnisins þar með ákveðin, við ætluðum að stroka leikinn millu af borðum og búa til millu borðspil sem geymt verður í vélarstofu VR-2 svo allir nemendur verkfræði deildar HÍ gætu spilað millu án þess að gera húsvörðinn gráhærðann.</p>
-                                        <p>Hófumst við því starx handa og opnuðum teikniforritið Fusion 360.</p>
-                                        <a href="https://www.autodesk.com/campaigns/education/student-design" class="image featured"><img src="images/Fusion360_Logo.png" alt="" /></a>
-                                        <h3>Framkvæmd hönnunar:</h3>
-                                        <p>Teikning millu-borðsins er í sjálfu sér nokkuð einföld. <br/ >
-                                        Borðið sjálft er ferhyrningur með málin XX x XX cm og var sá ferhyrningar extrude-aður 18mm út. <br/ >
-                                        Á borðinu eru 9 aðrir ferhyrningar með málin XX x XX cm og voru þeir extrude-aðir 9mm inn í borðið. <br/ >
-                                        Á sitthvorri langhliðinni eru 5 holur. hver hola hefur radíusinn XX cm og voru þær einnig extrude-aðar 9mm ofan í borðið sjálft.</p>
-                                        <a href="Verkefni4.html" class="image featured"><img src="images/Tik-Tak_mynd4.png" alt="" /></a>
-                                        <a href="Verkefni4.html" class="image featured"><img src="images/Tik-Tak_mynd2.png" alt="" /></a>
-                                        <h3>Framkvæmd fræsingar:</h3>
-                                        <p>Þegar teikningin var svo tilbúin fórum við með tölvur okkar upp í <a href="https://www.fablab.is/">FabLab stofu Reykjavíkur</a>. <br/ >
-                                        Þar fengum við aðstoð við uppsetningu skjala. Teikningin var exportuð úr Fusion 360 sem DXF skrá og hún flutt í Vcarve hugbúnaðinn.</p>
-                                        <a href="https://www.vectric.com/products/vcarve-desktop" class="image featured"><img src="images/Vcarve_Logo.jpg" alt="" /></a>
-                                        <p>Við fengum hjálp frá kennara við að setja stillingarnar í því forriti rétt upp. Við stilltum þessi atriði ekki í okkar tölvu og höfum því ekki mynd af nákvæmum stillingum. <br/ >
-                                        Það er hinsvegar mikilvægt að huga því að stillingarnar í feeds and speeds séu réttar, það er öryggis atriði. Þess vegna er gott að vera með vanan mann til þess að fara yfir að það sé rétt stillt, sem í okkar tilfelli var hann Hafliði. <br/ >
-                                        Ef það er ekki rétt stillt er hætta á ofhitnun, sem getur leitt til íkveikju, en einnig er hætta á því að efnið sem verið er að vinna með brotni ef stillingar eru ekki réttar. <br/ >
-                                        Við notuðum 18mm þykka viðar plötu sem við fengum uppi í FabLab. Reitirnir og götin á millu borðinu voru valin sem "pockets" í Vcarve og dýptin stillt sem 9mm. <br/ >
-                                        Næsta skref var að undirbúa toolpaths fyrir fræsinn. Nánari útskýringar á stillingum toolpaths má finna <a href="https://docs.vectric.com/docs/V9.0/VCarvePro/ENU/Help/Toolpaths/uiPocketMachineForm/Pocketing%20Toolpath.html">Hér.</a> <br/ >
-                                        Toolpath-ið okkar:</p>
-                                        <a href="#" class="image featured"><img src="images/Tik-Tak_Toolpath.jpg" alt="" /></a>
-                                        <p>Hluturinn var þar með tilbúinn í fræsingu. Platan sem við völdum var skrúfuð niður á borðið og ásarnir 3 stilltir(z, y og z ásarnir). <br/ >
-                                        Áður en fræsirinn er settur af stað er mikilvægt að viðeigandi öryggisbúnaður sé notaður. Passa þarf að allir séu með öryggisgleraugu og að lítil sem eingin hætta sé á því að föt geti flækst í fræsinum. <br/ >
-                                        Á meðan fræsingu stendur þarf ávallt einhver að vera viðstaddur og tilbúinn að ýta á neiðar stopp takkann ef eitthvað skildi fara úrskeiðis.</p>
-                                        <p>Þó teikningin okkar hafi verið með 90° horn þá myndast fillet(bogi) við fræsingu. </p>
-                                        <a href="#" class="image featured"><img src="images/Tik-Tak_Fraesing.jpg" alt="" /></a>
-                                        <p>Að fræsingu lokinni var platan losupð af borðinu og hluturinn pússaður, með vél að utanverðu en "vasarnir" voru pússaðir með höndunum. Eftir það var gengið í frágang á öllum búnaði sem notaður var og svæðið ryksugað þar sem mikið sag hafi myndast.</p>
-                                        <h3>Niðurstaða:</h3>
-                                        <p>Við teljum verkefni þetta hafa heppnast vel.</p>
-                                        <a href="#" class="image featured"><img src="images/Tik-Tak_lok.jpg" alt="" /></a>
-                                        <p>En þó má sjá að eitthvað hafi farið úrskeiðis þar sem brot myndaðist í tveimur vösum. Ekki er víst hvað olli þessu en líklegt er að platan hafi einfaldlega verið veikari þarna en annarstaðar.</p>
-                                        <a href="#" class="image featured"><img src="images/Tik-Tak_brot.jpg" alt="" /></a>
-                                        <h2>Tímaskráning:</h2>
-                                        <p>Innblástur: 10 min <br/ >
-                                        Teikningar og extrusion í Fusion 360: 150 min <br/ >
-                                        Undirbúningur undir fræsingu: 30 min <br/ >
-                                        Fræsing: 40 min <br/ >
-                                        Ítarleg prófun hlutar: 1 min</p>
-                                        <h3>Samtals: 231 mínúta</h3>
-                                        <h3>X og O dótið sem við náðum ekki að gera...</h3>
+                                        <p>Eins og framm kemur í lokaverkefninu sjálfu þá sá ég fyrst og fremst um gerð <a href="https://btk4.github.io/framleidsluferli/Verkefni5.html" class="">vefsíðunnar.</a><br/ >
+                                        Auk þess tókum við allir þátt í hugmyndarleitinni, fræsingunni sjálfti og tókum til eftir að henni var lokið. <br/ >
+                                        Ég átti stærstan hlut í einblöðungnum og glærukynningunni en við tókum allir þátt í því samt sem áður.</p>
+                                        <h2>Einblöðungur</h2>
+                                        <embed src="images/Einblodungur.pdf" width="500px" height="750px" />
+                                        <p>Ég hafði aldrei búið til einblöðung áður svo ég byrjaði á því að afla mér upplýsinga um hvað það væri. <br/ >
+                                        Komst ég að þeirri niðurstöðu að einblöðungur væri hálfgerð auglýsing og ég innilega vona að það hafi ekki verið rangt hjá mér. <br/ >
+                                        Ég notaðist við hugbúnaðinn <a href="https://www.microsoft.com/en-ww/microsoft-365/word" class="">Word</a> frá fyrirtækinu <a href="https://www.microsoft.com/" class="">Microsoft</a> við gerð einblöðungsins. <br/ >
+                                        Eftir að hafa opnað Word þá fann ég mynd af spilinu Tic-Tac-Toe og notaði hana til að fylla bakgrunnin. <br/ >
+                                        Eftir það færði ég þrjár myndir af myllu borði okkar yfir í Word skjalið og staðsetti þær þannig að það liti út eins og myllu borðið okkar hafi unnið leikinn. <br/ >
+                                        Yfir myndunum birti ég svo texta sem auglýsir borðið okkar og bendir fólki á hvar hægt er að ná í teikningar af borðinu frítt.</p>
+                                        <h2>Glæru kynning:</h2>
+                                        <embed src="images/Powerp.pdf" width="500px" height="330px" />
+                                        <p>Gerð glærukynninga ætti á þessum tíma og öld að vera nokkuð kunnug flestum. <br/ >
+                                        Ég notaðist við hugbúnaðinn <a href="https://www.microsoft.com/en-us/microsoft-365/powerpoint" class="">PowerPoint</a> frá fyrirtækinu <a href="https://www.microsoft.com/" class="">Microsoft.</a> <br/ >
+                                        Þar sem kynningin sjálf var lögð niður vegna Covid þá gerði ég þessar glærur nokkuð einfaldar og ákvað að hafa þetta stutt og lagott. <br/ >
+                                        Þegar glærurnar voru tilbúnar þá exportaði ég þeim yfir á pdf og xps form. <br/ >
+                                        PDF útgáfuna má sjá hér að ofan, valdi ég að exporta henni á pdf því ég kann að birta þær á vefsíðum. <br/ >
+                                        XPS útgáfuna notaði ég fyrir download takkann á vefsíðu lokaverkefnissins. Eingin sérstök ástæða var fyrir því að hafa hana á tveimur formum önnur en sú að mér langaði að prófa að nota XPS skrá.</p>
+                                        <h2>Niðurstaða</h2>
+                                        <p>Þetta var áhugavert verkefni og gerð vefsíðunnar var krefjandi og töluvert tímafrekari en ég hafi búist við. <br/ >
+                                        Það tók mig um 10 klukkustundir að fá hana á það form sem hún er á núna. <br/ >
+                                        Ég þurfti einnig að breyta vefsíðu minni í heild þar sem ég gerði ekki ráð fyrir því að síðustu 3 verkefnin (v4, v5 og v6) væru svona tengd.</p>
+                                        
+                                        
 									</article>
 
 							</div>
