--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 											<li><a href="Verkefni1.html">Verkefni 1</a></li>
 											<li><a href="Verkefni2.html">Verkefni 2</a></li>
 											<li><a href="Verkefni3.html">Verkefni 3</a></li>
-											<li><a href="Verkefni4.html">Verkefni 4</a></li>
+											<li><a href="Verkefni4.html">Mitt Framlag</a></li>
 											<li><a href="Verkefni5.html">Lokaverkefnið</a></li>
 										</ul>
 									</li>
