--- a/Verkefni4.html
+++ b/Verkefni4.html
@@ -85,7 +85,8 @@
                                         <a href="Verkefni4.html" class="image featured"><img src="images/Tik-Tak_skemmdarverk.jpg" alt="" /></a>
                                         <p>Eins og framm kemur í lokaverkefninu sjálfu þá sá ég fyrst og fremst um gerð <a href="https://btk4.github.io/framleidsluferli/Verkefni5.html" class="">vefsíðunnar.</a><br/ >
                                         Auk þess tókum við allir þátt í hugmyndarleitinni, fræsingunni sjálfti og tókum til eftir að henni var lokið. <br/ >
-                                        Ég átti stærstan hlut í einblöðungnum og glærukynningunni en við tókum allir þátt í því samt sem áður.</p>
+                                        Ég átti stærstan hlut í einblöðungnum og glærukynningunni en við tókum allir þátt í því samt sem áður. <br/ >
+                                        Skiptingu hlutverka og aðkoma hvers og eins, í hverju verkefni fyrir sig, má sjá í "Milestones" töflunum á vefsíðu lokaverkefnis.</p>
                                         <h2>Einblöðungur</h2>
                                         <embed src="images/Einblodungur.pdf" width="500px" height="750px" />
                                         <p>Ég hafði aldrei búið til einblöðung áður svo ég byrjaði á því að afla mér upplýsinga um hvað það væri. <br/ >
